Hide images on mobile, correct header font size

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -1,11 +1,25 @@
 @tailwind base;
 
-h1 {
-  @apply text-8xl font-medium leading-none;
-}
-
 a {
   @apply hover:text-black text-gray-600 transition duration-200;
+}
+
+/* Small (sm) */
+@media (max-width: 640px) {
+    h1 {
+        @apply text-3xl font-medium leading-none;
+    }
+
+    .hide-mobile {
+        display: none;
+    }
+}
+
+/* Medium (md) */
+@media (min-width: 768px) {
+    h1 {
+        @apply text-8xl font-medium leading-none;
+    }
 }
 
 @tailwind components;
